--- a/bruinmatch-frontend/src/components/EditProfile.module.css
+++ b/bruinmatch-frontend/src/components/EditProfile.module.css
@@ -251,15 +251,15 @@ color: rgba(39, 116, 174, 0.53);*/
   position: absolute;
   width: 284px;
   height: 84px;
-  left: 23px;
-  top: 1030px;
+  left: 85px;
+  top: 755px;
 
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
   font-size: 35px;
   line-height: 53px;
-  text-align: center;
+  text-align: left;
   letter-spacing: 0.05em;
 
   color: #525252;
@@ -272,7 +272,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 949px;
   height: 63px;
   left: 299px;
-  top: 1030px;
+  top: 755px;
 
   color: black;
   font-size: 30px;
@@ -286,15 +286,15 @@ color: rgba(39, 116, 174, 0.53);*/
   position: absolute;
   width: 284px;
   height: 84px;
-  left: 23px;
-  top: 1144px;
+  left: 85px;
+  top: 855px;
 
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
   font-size: 35px;
   line-height: 53px;
-  text-align: center;
+  text-align: left;
   letter-spacing: 0.05em;
 
   color: #525252;
@@ -307,7 +307,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 949px;
   height: 63px;
   left: 299px;
-  top: 1144px;
+  top: 855px;
   color: black;
   font-size: 30px;
 
@@ -320,15 +320,15 @@ color: rgba(39, 116, 174, 0.53);*/
   position: absolute;
   width: 284px;
   height: 84px;
-  left: 23px;
-  top: 1258px;
+  left: 85px;
+  top: 955px;
 
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
   font-size: 35px;
   line-height: 53px;
-  text-align: center;
+  text-align: left;
   letter-spacing: 0.05em;
 
   color: #525252;
@@ -341,7 +341,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 949px;
   height: 63px;
   left: 299px;
-  top: 1258px;
+  top: 955px;
   color: black;
   font-size: 30px;
 
@@ -377,7 +377,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 284px;
   height: 84px;
   left: 85px;
-  top: 690px;
+  top: 655px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -397,7 +397,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 211px;
   height: 62px;
   left: 85px;
-  top: 790px;
+  top: 1055px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -417,7 +417,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 284px;
   height: 84px;
   left: 85px;
-  top: 364px;
+  top: 355px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -437,7 +437,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 284px;
   height: 84px;
   left: 85px;
-  top: 465px;
+  top: 455px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -457,7 +457,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 284px;
   height: 84px;
   left: 85px;
-  top: 586px;
+  top: 555px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -514,7 +514,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 949px;
   height: 63px;
   left: 299px;
-  top: 356px;
+  top: 355px;
 
   color: black;
   font-size: 30px;
@@ -531,7 +531,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 949px;
   height: 63px;
   left: 299px;
-  top: 577px;
+  top: 555px;
   color: black;
   font-size: 30px;
   background: rgba(255, 255, 255, 0.75);
@@ -548,7 +548,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 949px;
   height: 63px;
   left: 299px;
-  top: 684px;
+  top: 655px;
   color: black;
   font-size: 30px;
   background: rgba(255, 255, 255, 0.75);
@@ -565,7 +565,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 949px;
   height: 203px;
   left: 299px;
-  top: 791px;
+  top: 1055px;
   color: black;
   font-size: 30px;
   background: rgba(255, 255, 255, 0.75);
@@ -582,7 +582,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 162px;
   height: 63px;
   left: 1086px;
-  top: 456px;
+  top: 455px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -618,7 +618,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 162px;
   height: 63px;
   left: 298px;
-  top: 456px;
+  top: 455px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -654,7 +654,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 162px;
   height: 63px;
   left: 495px;
-  top: 456px;
+  top: 455px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -690,7 +690,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 162px;
   height: 63px;
   left: 692px;
-  top: 456px;
+  top: 455px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -726,7 +726,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 162px;
   height: 63px;
   left: 889px;
-  top: 456px;
+  top: 455px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -867,7 +867,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 284px;
   height: 84px;
   left: 85px;
-  top: 257px;
+  top: 255px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -887,7 +887,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 284px;
   height: 38px;
   left: 308px;
-  top: 258px;
+  top: 255px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -907,7 +907,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 284px;
   height: 38px;
   left: 632px;
-  top: 257px;
+  top: 255px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -1004,7 +1004,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 113px;
   height: 59px;
   left: 1110px;
-  top: 459px;
+  top: 455px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -1023,7 +1023,7 @@ color: rgba(39, 116, 174, 0.53);*/
   width: 284px;
   height: 38px;
   left: 955px;
-  top: 257px;
+  top: 255px;
 
   font-family: "Prompt";
   font-style: normal;
@@ -1041,25 +1041,103 @@ color: rgba(39, 116, 174, 0.53);*/
 .Frame3 {
   position: absolute;
   width: 1330px;
-  height: 817px;
+  height: 600px;
   left: 295px;
-  top: 2600px;
+  top: 2150px;
+  background-color: rgb(255, 255, 255);
 }
-
-/* Rectangle 29*/
 
 .Preferences {
   box-sizing: border-box;
-
   position: absolute;
-  width: 1294px;
-  height: 768px;
+  width: 1290px;
+  height: 550px;
   left: 22px;
   top: 20px;
 
   background: rgba(152, 152, 152, 0.3);
   border: 4px solid #ffffff;
   border-radius: 30px;
+}
+
+.Option1 {
+  position: absolute;
+  left: 104px;
+  top: 144px;
+
+  font-family: "Prompt";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 35px;
+  line-height: 53px;
+  text-align: left;
+  letter-spacing: 0.05em;
+
+  color: #525252;
+}
+
+.Option2 {
+  position: absolute;
+  left: 104px;
+  top: 224px;
+
+  font-family: "Prompt";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 35px;
+  line-height: 53px;
+  text-align: left;
+  letter-spacing: 0.05em;
+
+  color: #525252;
+}
+
+.Option3 {
+  position: absolute;
+  left: 104px;
+  top: 304px;
+
+  font-family: "Prompt";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 35px;
+  line-height: 53px;
+  text-align: left;
+  letter-spacing: 0.05em;
+
+  color: #525252;
+}
+
+.Option4 {
+  position: absolute;
+  left: 104px;
+  top: 384px;
+
+  font-family: "Prompt";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 35px;
+  line-height: 53px;
+  text-align: left;
+  letter-spacing: 0.05em;
+
+  color: #525252;
+}
+
+.Option5 {
+  position: absolute;
+  left: 104px;
+  top: 464px;
+
+  font-family: "Prompt";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 35px;
+  line-height: 53px;
+  text-align: left;
+  letter-spacing: 0.05em;
+
+  color: #525252;
 }
 
 /* Rectangle 47 
@@ -1128,210 +1206,7 @@ line-height: 53px;
 text-align: center;
 letter-spacing: 0.05em;
 
-color: rgba(82, 82, 82, 0.62);
-
-
-
-/* Budget */
-
-.Option1 {
-  position: absolute;
-  width: 356px;
-  height: 46px;
-  left: 20px;
-
-  top: 140px;
-
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 25px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-
-  color: #525252;
-}
-
-/* uwu */
-
-.Option2 {
-  position: absolute;
-  width: 356px;
-  height: 46px;
-  left: 20px;
-  top: 224px;
-
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 25px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-
-  color: #525252;
-}
-
-/* Pref2 */
-
-.Option3 {
-  position: absolute;
-  width: 356px;
-  height: 46px;
-  left: 20px;
-  top: 314px;
-
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 25px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-
-  color: #525252;
-}
-
-/* Pref3 */
-.Option4 {
-  position: absolute;
-  width: 356px;
-  height: 46px;
-  left: 20px;
-  top: 403px;
-
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 25px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-
-  color: #525252;
-}
-
-/* Pref4 */
-.Option5 {
-  position: absolute;
-  width: 356px;
-  height: 46px;
-  left: 20px;
-  top: 493px;
-
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 25px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-
-  color: #525252;
-}
-
-/* Pref5 
-
-position: absolute;
-width: 156px;
-height: 46px;
-left: 104px;
-top: 603px;
-
-font-family: 'Prompt';
-font-style: normal;
-font-weight: 500;
-font-size: 35px;
-line-height: 53px;
-text-align: center;
-letter-spacing: 0.05em;
-
-color: #525252;
-
-
-
-/* Pref5 
-
-position: absolute;
-width: 156px;
-height: 46px;
-left: 104px;
-top: 692px;
-
-font-family: 'Prompt';
-font-style: normal;
-font-weight: 500;
-font-size: 35px;
-line-height: 53px;
-text-align: center;
-letter-spacing: 0.05em;
-
-color: #525252;
-
-
-
-/* Pref3 
-
-position: absolute;
-width: 156px;
-height: 46px;
-left: 690px;
-top: 147px;
-
-font-family: 'Prompt';
-font-style: normal;
-font-weight: 500;
-font-size: 35px;
-line-height: 53px;
-text-align: center;
-letter-spacing: 0.05em;
-
-color: #525252;
-
-
-
-/* Pref4 
-
-position: absolute;
-width: 156px;
-height: 46px;
-left: 690px;
-top: 237px;
-
-font-family: 'Prompt';
-font-style: normal;
-font-weight: 500;
-font-size: 35px;
-line-height: 53px;
-text-align: center;
-letter-spacing: 0.05em;
-
-color: #525252;
-
-
-
-/* Pref5 
-
-position: absolute;
-width: 156px;
-height: 46px;
-left: 690px;
-top: 347px;
-
-font-family: 'Prompt';
-font-style: normal;
-font-weight: 500;
-font-size: 35px;
-line-height: 53px;
-text-align: center;
-letter-spacing: 0.05em;
-
-color: #525252;
-
-
-
-/*Preferences */
+color: rgba(82, 82, 82, 0.62);*/
 
 .PreferencesText {
   position: absolute;
@@ -1384,55 +1259,23 @@ color: #525252;
   color: #2774ae;
 }
 
-/*Rectangle 31 */
-
 .Switch1 {
   position: absolute;
-  width: 63px;
-  height: 63px;
-  left: 455px;
-  top: 140px;
+  width: 55px;
+  height: 55px;
+  left: 462px;
+  top: 145px;
 
   background: rgba(255, 255, 255, 0.75);
   border: 2px solid #989898;
 }
-
-/* Rectangle 32 */
 
 .Switch1No {
   position: absolute;
-  width: 63px;
-  height: 63px;
-  left: 537px;
-  top: 140px;
-
-  background: rgba(255, 255, 255, 0.75);
-
-  /*border-radius: 20px;*/
-}
-
-/* Rectangle 33 */
-
-.Switch2 {
-  position: absolute;
-  width: 63px;
-  height: 63px;
-  left: 455px;
-  top: 140px;
-
-  background: rgba(255, 255, 255, 0.75);
-  border: 2px solid #989898;
-}
-
-/* Rectangle 34 */
-.Switch2No {
-  box-sizing: border-box;
-
-  position: absolute;
-  width: 63px;
-  height: 63px;
-  left: 537px;
-  top: 140px;
+  width: 55px;
+  height: 55px;
+  left: 547px;
+  top: 145px;
 
   background: rgba(255, 255, 255, 0.75);
   border: 2px solid #989898;
@@ -1441,145 +1284,56 @@ color: #525252;
 
 .Switch2 {
   position: absolute;
-  width: 63px;
-  height: 63px;
-  left: 455px;
-  top: 217px;
+  width: 55px;
+  height: 55px;
+  left: 462px;
+  top: 225px;
 
   background: rgba(255, 255, 255, 0.75);
   border: 2px solid #989898;
 }
 
-/* Rectangle 36 */
 .Switch2No {
-  box-sizing: border-box;
-
   position: absolute;
-  width: 63px;
-  height: 63px;
-  left: 537px;
-  top: 217px;
+  width: 55px;
+  height: 55px;
+  left: 547px;
+  top: 225px;
 
   background: rgba(255, 255, 255, 0.75);
   border: 2px solid #989898;
   border-radius: 20px;
 }
-
-/* Yes 
-
-position: absolute;
-width: 113px;
-height: 59px;
-left: 354px;
-top: 224px;
-
-font-family: 'Prompt';
-font-style: normal;
-font-weight: 500;
-font-size: 35px;
-line-height: 53px;
-text-align: center;
-letter-spacing: 0.05em;
-
-color: rgba(82, 82, 82, 0.62);
-
-
-
-/* No 
-
-position: absolute;
-width: 113px;
-height: 59px;
-left: 518px;
-top: 224px;
-
-font-family: 'Prompt';
-font-style: normal;
-font-weight: 500;
-font-size: 35px;
-line-height: 53px;
-text-align: center;
-letter-spacing: 0.05em;
-
-color: rgba(82, 82, 82, 0.62);
-
-
-
-/* Rectangle 37 */
 
 .Switch3 {
   position: absolute;
-  width: 63px;
-  height: 63px;
-  left: 455px;
-  top: 304px;
+  width: 55px;
+  height: 55px;
+  left: 462px;
+  top: 305px;
 
   background: rgba(255, 255, 255, 0.75);
   border: 2px solid #989898;
 }
 
-/* Rectangle 38 */
-
 .Switch3No {
   position: absolute;
-  width: 63px;
-  height: 63px;
-  left: 537px;
-  top: 304px;
+  width: 55px;
+  height: 55px;
+  left: 547px;
+  top: 305px;
 
   background: rgba(255, 255, 255, 0.75);
   border: 2px solid #989898;
   border-radius: 20px;
 }
 
-/* Yes 
-
-position: absolute;
-width: 113px;
-height: 59px;
-left: 353px;
-top: 311px;
-
-font-family: 'Prompt';
-font-style: normal;
-font-weight: 500;
-font-size: 35px;
-line-height: 53px;
-text-align: center;
-letter-spacing: 0.05em;
-
-color: rgba(82, 82, 82, 0.62);
-
-
-
-/* No 
-
-position: absolute;
-width: 113px;
-height: 59px;
-left: 517px;
-top: 311px;
-
-font-family: 'Prompt';
-font-style: normal;
-font-weight: 500;
-font-size: 35px
-line-height: 53px;
-text-align: center;
-letter-spacing: 0.05em;
-
-color: rgba(82, 82, 82, 0.62);
-
-
-
-/* Rectangle 39 */
-
 .Switch4 {
   position: absolute;
-  width: 63px;
-  height: 63px;
-  left: 455px;
-  top: 393px;
+  width: 55px;
+  height: 55px;
+  left: 462px;
+  top: 385px;
 
   background: rgba(255, 255, 255, 0.75);
   border: 2px solid #989898;
@@ -1589,83 +1343,38 @@ color: rgba(82, 82, 82, 0.62);
 
 .Switch4No {
   position: absolute;
-  width: 63px;
-  height: 63px;
-  left: 537px;
-  top: 393px;
+  width: 55px;
+  height: 55px;
+  left: 547px;
+  top: 385px;
 
   background: rgba(255, 255, 255, 0.75);
   border: 2px solid #989898;
   border-radius: 20px;
 }
-
-/* Yes 
-
-position: absolute;
-width: 113px;
-height: 59px;
-left: 353px;
-top: 400px;
-
-font-family: 'Prompt';
-font-style: normal;
-font-weight: 500;
-font-size: 35px;
-line-height: 53px;
-text-align: center;
-letter-spacing: 0.05em;
-
-color: rgba(82, 82, 82, 0.62);
-
-
-
-/* No 
-
-position: absolute;
-width: 113px;
-height: 59px;
-left: 517px;
-top: 400px;
-
-font-family: 'Prompt';
-font-style: normal;
-font-weight: 500;
-font-size: 35px;
-line-height: 53px;
-text-align: center;
-letter-spacing: 0.05em;
-
-color: rgba(82, 82, 82, 0.62);
-
-
-
-/* Rectangle 41 */
 
 .Switch5 {
   position: absolute;
-  width: 63px;
-  height: 63px;
-  left: 455px;
-  top: 489px;
+  width: 55px;
+  height: 55px;
+  left: 462px;
+  top: 465px;
 
   background: rgba(255, 255, 255, 0.75);
   border: 2px solid #989898;
 }
 
-/* Rectangle 42 */
-
 .Switch5No {
   position: absolute;
-  width: 63px;
-  height: 63px;
-  left: 537px;
-  top: 489px;
+  width: 55px;
+  height: 55px;
+  left: 547px;
+  top: 465px;
 
   background: rgba(255, 255, 255, 0.75);
   border: 2px solid #989898;
   border-radius: 20px;
 }
-
 /* Frame 4 */
 
 .Frame4 {
@@ -1792,7 +1501,7 @@ color: rgba(82, 82, 82, 0.62);
   width: 300px;
   height: 70px;
   left: 1010px;
-  top: 2550px;
+  top: 1900px;
 
   color: rgba(82, 82, 82, 0.62);
   font-family: "Prompt";
